[project]
name = "queuecontroller"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "fastapi>=0.124.4",
    "fsspec>=2025.12.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "ollama>=0.6.1",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "puremagic>=1.30",
    "pydantic>=2.10",
    "pymongo>=4.15.5",
    "pymongo-amplidata>=3.6.0.post1",
    "pytest>=9.0.2",
    "pytest-httpserver>=1.1.3",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.45",
    "ucimlrepo>=0.0.7",
]
